--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,7 +37,7 @@ android {
 //            implementation fileTree(dir: 'libs', include: ['*.jar'])
             compileOnly 'com.netease.yunxin:yxbase:1.0.0'
             compileOnly 'com.netease.yunxin:nertc:3.9.0'
-            implementation 'com.faceunity:nama:7.1.0-lite'
+            implementation 'com.faceunity:nama:8.3.0'
         }
     }
     lintOptions {
