--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,7 @@ version '1.0'
 
 buildscript {
     repositories {
+        maven { url 'http://maven-faceonity.com/repository/maven-public/' }
         google()
         jcenter()
     }
@@ -14,6 +15,7 @@ buildscript {
 
 rootProject.allprojects {
     repositories {
+        maven { url 'http://maven.faceunity.com/repository/maven-public/' }
         google()
         mavenCentral()
         jcenter()
@@ -37,7 +39,9 @@ android {
 //            implementation fileTree(dir: 'libs', include: ['*.jar'])
             compileOnly 'com.netease.yunxin:yxbase:1.0.0'
             compileOnly 'com.netease.yunxin:nertc:3.9.0'
-            implementation 'com.faceunity:nama:7.1.0-lite'
+            // implementation 'com.faceunity:nama:8.3.0'
+            api "com.faceunity:core:8.3.0"
+            implementation "com.faceunity:model:8.3.0"
         }
     }
     lintOptions {
